/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This file may have been modified by Bytedance Inc.
 */

/**
 * These .proto interfaces are public and stable.
 * Please see http://wiki.apache.org/hadoop/Compatibility
 * for what changes are allowed for a *stable* .proto interface.
 */

option java_package = "com.bytedance.primus.common.proto";
option java_outer_classname = "ModelProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package primus.common;

import "Security.proto";

message ApplicationIdProto {
  optional int32 id = 1;
  optional int64 cluster_timestamp = 2;
}

message ApplicationAttemptIdProto {
  optional ApplicationIdProto application_id = 1;
  optional int32 attemptId = 2;
}

message ContainerIdProto {
  optional ApplicationIdProto app_id = 1;
  optional ApplicationAttemptIdProto app_attempt_id = 2;
  optional int64 id = 3;
  optional int32 migration = 4 [default = 0]; // migration count, default is zero
}

enum ResourceTypesProto {
  COUNTABLE = 0;
}

message ValueRangeProto{
  required int32 begin = 1;
  required int32 end = 2;
}

message ValueRangesProto {
  repeated ValueRangeProto ranges = 1;
  optional bytes ranges_byte_store = 2;
  optional bool byte_store_enable = 3 [default = false];
  optional int32 byte_store_encode = 4 [default = 0];
}

message ResourceInformationProto {
  required string key = 1;
  optional int64 value = 2;
  optional string units = 3;
  optional ResourceTypesProto type = 4;
  optional ValueRangesProto value_ranges = 5;
}

message ResourceTypeInfoProto {
  required string name = 1;
  optional string units = 2;
  optional ResourceTypesProto type = 3;
}

message ResourceProto {
  optional int64 memory = 1;
  optional int32 virtual_cores = 2;
  repeated ResourceInformationProto resource_value_map = 3;
}

message ContainerProto {
  optional ContainerIdProto id = 1;
  optional NodeIdProto nodeId = 2;
  optional string node_http_address = 3;
  optional ResourceProto resource = 4;
  optional PriorityProto priority = 5;
  optional primus.common.TokenProto container_token = 6;
  optional bool is_guaranteed = 1028 [default = true];
}

message NodeIdProto {
  optional string host = 1;
  optional int32 port = 2;
}

message PriorityProto {
  optional int32 priority = 1;
}

message StringStringMapProto {
  optional string key = 1;
  optional string value = 2;
}
